fix: adjust button styling

--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -584,13 +584,20 @@ position:fixed;
             bottom:0.3em;
             @include transition(all 400ms ease-in); 
           }//&:before
-      }//label
+      }//label 
 
       >label.filter-button-bottom {
         z-index: 0.5;
         width: 56px; // set a smaller width 
         height: 2em; 
-        background: grey;
+        background: #F2F2F2;
+        color: #124d20;
+        border:1px solid black;
+    
+        &:not(.filter-button-bottom):hover {
+          &:before {
+            @include transform(rotate(180deg)translate(0,1px));
+          }//&:before
 
     }
 
@@ -751,101 +758,6 @@ justify-content: space-between;
             }//&:before
       }//&:hover
 }//input#filter[type="checkbox"]:checked~label.filter
-
-input#legend[type="checkbox"]:checked ~ label.filter-button-bottom{
-  >label {
-    display: block;
-    -moz-transition: all 200ms ease-in;
-    -webkit-transition: all 200ms ease-in;
-    -o-transition: all 200ms ease-in;
-    transition: all 200ms ease-in;
-    z-index: 2;
-    cursor: pointer;
-right: 0px;
-bottom: 0;
-left:0;
-margin: auto;
-position:fixed;
-  transform-origin:top center;
-      font-size: 1.2em;
-      background: lighten(lightgray, 12%);
-      color: black;
-      border:1px solid darken(lightgray,7%);
-      width: 60px !important;
-      height: 2em;
-        &:hover{
-          border:1px solid $darkgreen;
-              bottom:12px;
-          @include transition(all 400ms ease-in); 
-            &:after{
-              border: 1px solid lighten(black, 35%);
-              border-right: 1px solid transparent;
-            }
-          ~.content{
-            bottom:-370px; /* content on hover */
-          }
-          &:before {
-            @include transform(rotate(180deg)translate(0,1px));
-          }//&:before
-        }//&:hover
-        
-      h2{
-        font-size: 14px;
-        padding:6px 20px;
-        line-height: 0.2;
-        color:darken(gray,25%);
-        font-weight:normal;
-        text-transform: uppercase;
-      }//h2
-        &:before{
-          content: '▾';
-          @include transform(rotate(180deg)translate(0,-3px));
-          position: absolute;
-          right:1em;
-          bottom:0.3em;
-          @include transition(all 400ms ease-in); 
-        }//&:before
-    }//label
-
-
-          bottom: 0px; // set to the bottom
-          background:$darkgreen;
-          h2{
-          color:rgb(255, 0, 0);
-
-          font-size: 1.2em;
-          background: lighten(lightgray, 12%);
-          //color: black;
-          border:1px solid darken(#132b19,7%);
-          width: 60px !important;
-          height: 2em;
-            &:hover{
-              border:1px solid $darkgreen;
-                  bottom:12px;
-              @include transition(all 400ms ease-in); 
-                &:after{
-                  border: 1px solid lighten(black, 35%);
-                  border-right: 1px solid transparent;
-                }
-              ~.content{
-                bottom:-370px; /* content on hover */
-              }
-              &:before {
-                @include transform(rotate(180deg)translate(0,1px));
-              }//&:before
-            }//&:hover
-            }
-          /* cross icon */
-          &:before {
-            content: '▾';
-            @include transform(rotate(0)translate(0,1px));
-            color:rgb(0, 0, 0);
-          }//&:before
-          &:hover{
-            &:before {
-              transform: translate(0, 3px);
-            }//&:before
-}//&:hover
 
 }//#filter-wrapper
 
