--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -532,7 +532,7 @@ nav {
 #filter-wrapper {
   z-index: 999;
   pointer-events: auto;
-  >label {
+  >label.filter-button {
       display: block;
       -moz-transition: all 200ms ease-in;
       -webkit-transition: all 200ms ease-in;
@@ -580,26 +580,72 @@ position:fixed;
             content: '▾';
             @include transform(rotate(180deg)translate(0,-3px));
             position: absolute;
-            right:1.1em;
+            right:0.93em;
             bottom:0.3em;
             @include transition(all 400ms ease-in); 
           }//&:before
       }//label 
 
       >label.filter-button-bottom {
-        z-index: 0.5;
-        width: 56px; // set a smaller width 
+        display: block;
+        -moz-transition: all 200ms ease-in;
+        -webkit-transition: all 200ms ease-in;
+        -o-transition: all 200ms ease-in;
+        transition: all 200ms ease-in;
+        z-index: 2;
+        cursor: pointer;
+        right: 0px;
+        bottom: 0;
+        left:0;
+        margin: auto;
+        position:fixed;
+        transform-origin:top center;
+        font-size: 1.2em;
+          
+        
+        z-index: 1;
+        width: 50px; // set a smaller width 
         height: 2em; 
         background: #F2F2F2;
         color: #124d20;
         border:1px solid black;
     
-        &:not(.filter-button-bottom):hover {
-          &:before {
-            @include transform(rotate(180deg)translate(0,1px));
+        /* &:hover{
+          border:1px solid $darkgreen;
+              bottom:0px; // set the button stick to the bottom
+          @include transition(all 400ms ease-in); 
+            &:after{
+              border: 1px solid lighten(black, 35%);
+              border-right: 1px solid transparent;
+            }
+          ~.content{
+            bottom:-370px; /* content on hover */
+          }
+          //&:before {
+          //  @include transform(rotate(180deg)translate(0,1px)); 
+          }//&:before 
+        //}//&:hover */
+       
+        h2{
+          font-size: 14px;
+          padding:6px 20px;
+          line-height: 0.2;
+          color:darken(gray,25%);
+          font-weight:normal;
+          text-transform: uppercase;
+        }//h2
+          &:before{
+            content: '▸';
+            //@include transform(rotate(180deg)translate(0,-3px));
+            position: absolute;
+            right:0.93em;
+            bottom:0.3em;
+            //transform: rotate(90deg); /* Rotate the triangle */
+            //display: inline-block;
+            //@include transition(all 400ms ease-in); 
           }//&:before
 
-    }
+    //}
 
     .content {
          position: fixed;
@@ -658,7 +704,7 @@ justify-content: space-between;
                 height:40px;
                 width: 40px;
                 transition-duration: 0.2s;
-                border-radius:50%;
+                //border-radius:50%;
                 vertical-align: middle;
                 margin-right:8px;
               }//img
@@ -683,9 +729,10 @@ justify-content: space-between;
               color: white;
 
               img {
-                //transform: scale(1);
+                transform: scale(1);
                 border: 1px solid $midgreen;
                 opacity: 1;
+                //border-radius: 0;
                 background: white;
               }
 
@@ -711,6 +758,7 @@ justify-content: space-between;
             img{
           width:50px;
           height:50px;
+          border-radius:50%;
           @include transition(all 300ms ease-in); 
             }
             &:hover{
@@ -733,7 +781,7 @@ justify-content: space-between;
         }
       }
 
-  }/* end .content */
+  /* end .content */
     input#filter[type="checkbox"] {
       display: none;
   }
@@ -757,9 +805,10 @@ justify-content: space-between;
               transform: translate(0, 3px);
             }//&:before
       }//&:hover
+
 }//input#filter[type="checkbox"]:checked~label.filter
 
-}//#filter-wrapper
+//#filter-wrapper
 
 #legend-wrapper {
   z-index: 99;
