--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -620,10 +620,10 @@ position:fixed;
             }
           ~.content{
             bottom:-370px; /* content on hover */
-          }
+          //}
           //&:before {
           //  @include transform(rotate(180deg)translate(0,1px)); 
-          }//&:before 
+          //}//&:before 
         //}//&:hover */
        
         h2{
@@ -644,8 +644,6 @@ position:fixed;
             //display: inline-block;
             //@include transition(all 400ms ease-in); 
           }//&:before
-
-    //}
 
     .content {
          position: fixed;
